fix(@dpc-sdp/ripple-ui-core): :lipstick: fix profile image element overflow
Set img to display: block so the container matches the element height

--- a/packages/ripple-ui-core/src/components/profile/profile.css
+++ b/packages/ripple-ui-core/src/components/profile/profile.css
@@ -11,6 +11,7 @@
     margin-right: var(--rpl-sp-4);
 
     img {
+      display: block;
       border-radius: var(--rpl-border-radius-full);
       object-fit: cover;
       height: var(--local-image-size);
